# Landslide4Sense

./: .gitignore  Dockerfile  Makefile  dvc.yaml  params.yaml  pyproject.toml  requirements.txt  setup.cfg
.dvc/: config
colab/: frozen_libs.txt  predict.sh  setup.sh  train.sh
conf/: config.yaml
config/: config.yaml
notebooks/: 1_sga_img_aug.ipynb  2_modelling.ipynb  3_evaluation.ipynb  segformer.ipynb
scripts/: calibrate.py  predict.py  split_data.py  train.py
src/landslide4sense/: __init__.py
src/landslide4sense/config/: config.py
src/landslide4sense/data/: __init__.py  augmentations.py  dataset.py  transformations.py
src/landslide4sense/experiments/: __init__.py  setup.py
src/landslide4sense/losses/: _losses.py
src/landslide4sense/models/: __init__.py  segformer.py  unet.py
src/landslide4sense/training/: __init__.py  base_callbacks.py  base_trainer.py  callbacks.py  trainer.py
src/landslide4sense/utils/: __init__.py  repro.py  restoring.py  tools.py
stages/: 0_train.py  1_calibrate.py  2_predict.py
