[metadata]
name = landslide4sense
version = 0.0.1
author = Sebastián García Acosta
description = LandSlide4Sense challenge solution
long_description = LandSlide4Sense challenge solution
keywords = deeplearning, computer-vision, machine-learning, artificial-intelligence, document-ai

[options]
python_requires = >=3.7, <4
package_dir=
    =src
packages=find:

[options.packages.find]
where=src